--- a/metadata.yaml
+++ b/metadata.yaml
@@ -43,6 +43,7 @@ subjects:
 - !lcsh 'New York (State) -- History -- 1775-1865 -- Fiction'
 - !lcsh 'Historical fiction'
 - !lcsh 'Frontier and pioneer life -- New York (State) -- Fiction'
+- GITenberg
 title: 'Kuvauksia metsäelämästä sivistyksen äärimmäisellä rajalla
 
   eli Natty Bumpon elämänvaiheet'
